--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,6 +6,10 @@
         display: inline-flex;
     }
 
+    .menu-close {
+        display: flex;
+    }
+
     .nav-links {
         position: absolute;
         inset: 4rem 0 auto;
